# littlesnitch-linux

./: Gruntfile.js  package-lock.json  package.json  webpack.config.js
common/src/: dns_types.rs  flow_types.rs  lib.rs  repeat.rs
common/src/network_filter/: binary_rule.rs  binary_searchable_page.rs  blocklist_matching.rs  domain_name_page.rs  filter_engine.rs  port_table_search.rs  rule_types.rs
demo-runner/: Cargo.toml
demo-runner/src/: demo_node_manager.rs  main.rs
ebpf/: build.rs
ebpf/co-re/: co-re.h
ebpf/src/: context.rs  current_executable.rs  dn_expand.rs  dns_cache.rs  filter_engine_connection.rs  flow_cache.rs  ip_parser.rs  main.rs  node_cache.rs  socket_properties.rs
webroot/: app.js  blocklists.css  blocklists.js  connections.css  connections.js  index.html  localization.js  manifest.json  rules.css  rules.js  styles.css  sw.js  traffic.css  traffic.js
webroot/css/: app.scss  blocklists.css  connections.css  fonts.scss  rules.css  style.css  style.min.css  traffic.css  uPlot.min.css
webroot/js/: app.js  blocklists.js  connections.js  datetime.js  footer-app.js  footer-app.min.js  footer-app.min.js.LICENSE.txt  header-app.js  header-app.min.js  localization.js  rules.js  selection.js  theme-init.js  traffic.js  uPlot.iife.min.js
