[package]
name = "demo-runner"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
common = { path = "../common", features = ["user"] }

anyhow = { version = "1", default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
# `std` feature is currently required to build `clap`.
clap = { version = "4.5.20", default-features = false, features = ["derive", "std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.40.0", default-features = false, features = ["full"] }


[build-dependencies]
anyhow = { version = "1", default-features = false }
aya-build = { workspace = true }
cargo_metadata = { version = "0.23.0", default-features = false }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
ebpf = { path = "../ebpf" }

[[bin]]
name = "demo-runner"
path = "src/main.rs"
